adding myfirst.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </table>
 
   <!-- Bonus link to last class page -->
-  <a href="C:\Users\galci\Documents\Git\Trilogy_demo\11-Web\1\Activities\04-Stu_MyFirst_HTML\Unsolved\my-first.html">My First HTML Bonus</a>
+  <a href="myfirst.html">My First HTML Bonus</a>
 
 
 </body>
