--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
   <meta charset="UTF-8">
   <title>Alciluz</title>
 </head>
 
 <body>
-  <h1>Alciluz Gomez</h1>
+  <section>
+    <div class="container">
+      <h1>Alciluz Gomez</h1>
+      <img width="200" src="images\biography.jpg" alt="biography">
+      <p>InformaticEngineer</p>
+      <p>IT Professional, looking for opportunities in the data analyst and visualization career path. </p>
 
-  <img width="200" src="biography.jpg" alt="biography">
+      <ul>
+        <li><strong>Email:</strong> <a href="#">galciluz@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="https://github.com/galciluz">https://github.com/galciluz</a></li>
+        <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
+      </ul>
 
-  <p>InformaticEngineer</p>
-  <p>IT Professional, looking for opportunities in the data analyst and visualization career path. </p>
+      <table border="1">
+        <tr>
+          <th>Music</th>
+          <th>Movies</th>
+          <th>Activities</th>
+        </tr>
+        <tr>
+          <td>Memories</td>
+          <td>Vampire Diaries</td>
+          <td>Travel</td>
+        </tr>
+        <tr>
+          <td>More than word</td>
+          <td>How to get away with murder</td>
+          <td>go shopping</td>
+        </tr>
+        <tr>
+          <td>Nobody but you</td>
+          <td>The Black List</td>
+          <td>Zumba</td>
+        </tr>
+      </table>
 
-  <ul>
-    <li><strong>Email:</strong> <a href="#">galciluz@gmail.com</a></li>
-    <li><strong>Github:</strong> <a href="#">https://github.com/galciluz</a></li>
-    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
-  </ul>
-
-  <table border="1">
-    <tr>
-      <th>series</th>
-      <th>Movies</th>
-      <th>Activities</th>
-    </tr>
-    <tr>
-      <td>Memories</td>
-      <td>Vampire Diaries</td>
-      <td>Travel</td>
-    </tr>
-    <tr>
-      <td>More than word</td>
-      <td>How to get away with murder</td>
-      <td>go shopping</td>
-    </tr>
-    <tr>
-      <td>Nobody but you</td>
-      <td>The Black List</td>
-      <td>Zumba</td>
-    </tr>
-  </table>
-
-  <!-- Bonus link to last class page -->
-  <a href="myfirst.html">My First HTML Bonus</a>
-
-
+      <!-- Bonus link to last class page -->
+      <h2>My favorite series</h2>
+      <a href="myfirst.html"> Vampires Series</a>
+    </div>
+  </section>
 </body>
 
 </html>
